Dec 8, 2006

  * ENHANCED: rdf_load/2 to load plugins dealing with different formats,
    compression and sources such as HTTP.

  * ADDED: rdf_turtle.pl to load Turtle files.

Nov 24, 2006

  * FIXED: subPropertyOf issue.  Michiel Hildebrand.

Nov 9, 2006

  * FIXED: subPropertyOf issues.  Not fully checked yet.

Oct 25, 2006

  * FIXED: Memory leak in rdf_complexity and rdf_reachable using literal
    object.

Oct 24, 2006

  * FIXED: Changed subject was broadcasted as object after rdf_update/4.

  * FIXED: Bug in duplicate administration when using language or type
    qualified literals.  Can cause assertion failure.  With help from
    Jacco van Ossenbruggen.

Oct 11, 2006

  * FIXED: Deal with new absolute_file_name sematics for file_type(directory).

Oct 2, 2006

  * FIXED: rdf_load/2 in combination with rdf_persistency.pl.  Faster and
    avoid leaking file-handles.  Jacco van Ossenbruggen.

  * ADDED: rdf_persistency/2 to control whether or not a database is maintained
    in the persistent database.  E-culture project.

  * ADDED: numerical keys between/2, le/1 and ge/1 to rdf_find_literals/2.
    E-culture project.

Sep 11, 2006

  * ADDED: options base_uri and write_xml_base to rdf_save/2.  Jochem
    Liem.

Aug 27, 2006

  * FIXED: Bug#199: failed to compile in single-thread mode. Keri Harris. 

Aug 16, 2006

  * FIXED: Bug#194: Alignment problem.  Keri Harris.

Jul 27, 2006

  * FIXED: use rdf:nodeID for bnodes that are used multiple times.
    "Yves Raimond"

Jul 11, 2006

  * Fixed: Crash in rdf(+S, -P, literal(prefix(+Prefix), -Value)).
    Michiel Hildebrand.

Jun 26, 2006

  * Fail silent on rdf(literal(x), ...) and rdf(S, literal(x), ...).

Jun 21, 2006

  * ADDED: silent(true) as option to rdf_load/2.

Apr 10, 2006

  * Enhanced: rdf_persistency.pl: sort files by size, assuming the schema
    are generally smaller and loading them first reduces re-hashing the
    database.
